--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Landing Page</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/CSS/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/CSS/unsemantic-grid-responsive-tablet.css" type="text/css">
 </head>
 <body>
+<header>
 
+    <h1>newsbox</h1>
+    all the news in a box
+
+</header>
+<content>
+
+</content>
+<footer>
+
+</footer>
 </body>
 </html>
