--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 <header>
 
-    <h1>newsbox</h1>
-    all the news in a box
+    <h1><strong>newsbox</strong><br>
+    all the news in a box</h1>
 
 </header>
-<content>
+<main>
 
-</content>
+</main>
 <footer>
 
 </footer>
