--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 <header>
 
-    <h1><strong>newsbox</strong><br>
-    all the news in a box</h1>
+    <h1>newsbox</h1><br>
+    all the news in a box
 
 </header>
 <main>
