--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
     all the news in a box
 
 </header>
-<main>
+<main class="grid-container">
+    <section class="grid-50">
+
+        <img src="assets/img/logo.png">
+    </section>
+    <section class="grid-50">
+
+        <img src="assets/img/logo.png">
+    </section>
+    <section class="grid-50">
+
+        <img src="assets/img/logo.png">
+    </section>
+    <section class="grid-50">
+
+        <img src="assets/img/logo.png">
+    </section>
+
 
 </main>
 <footer>
