--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     all the news in a box
 
 </header>
+
 <main class="grid-container">
+
     <section class="grid-50">
 
-        <img src="assets/img/logo.png">
+       <p><img src="assets/img/logo.png"></p>
     </section>
     <section class="grid-50">
 
-        <img src="assets/img/logo.png">
+        <p><img src="assets/img/logo.png"></p>
     </section>
     <section class="grid-50">
 
