--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
 
     <section class="grid-50">
 
-       <p><img src="assets/img/logo.png"></p>
-    </section>
-    <section class="grid-50">
-
-        <p><img src="assets/img/logo.png"></p>
+       <img src="assets/img/logo.png">
     </section>
     <section class="grid-50">
 
         <img src="assets/img/logo.png">
     </section>
     <section class="grid-50">
+
+        <img src="assets/img/logo.png">
+    </section>
+    <section class="grid-50">
+
+        <img src="assets/img/logo.png">
+    </section>
+    <section class="grid-100">
 
         <img src="assets/img/logo.png">
     </section>
