--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <section class="grid-45">
 
-       <img src="assets/img/logo.png">
+        <a href="list.html"> <img src="assets/img/logo.png"></a>
+
+
     </section>
     <section class="grid-45">
 
