--- a/index.html
+++ b/index.html
@@ -16,31 +16,21 @@
 </header>
 
 <main class="grid-container">
-
     <section class="grid-45">
-
-        <a href="list.html"> <img src="assets/img/logo.png"></a>
-
-
+        <a href="list.html"><img src="assets/img/logo.png"></a>
     </section>
     <section class="grid-45">
-
-        <img src="assets/img/logo.png">
+        <a href="list.html"><img src="assets/img/logo.png"></a>
     </section>
     <section class="grid-45">
-
-        <img src="assets/img/logo.png">
+        <a href="list.html"><img src="assets/img/logo.png"></a>
     </section>
     <section class="grid-45">
-
-        <img src="assets/img/logo.png">
+        <a href="list.html"><img src="assets/img/logo.png"></a>
     </section>
     <section class="grid-90">
-
-        <img src="assets/img/logo.png">
+        <a href="add.html"><img src="assets/img/logo.png"></a>
     </section>
-
-
 </main>
 <footer>
 
