--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <a href="list.html"><img src="assets/img/logo.png"></a>
     </section>
     <section class="grid-45">
-        <a href="list.html"><img src="assets/img/logo.png"></a>
+        <a href="list.html"><img src="assets/img/logo2.png"></a>
     </section>
     <section class="grid-45">
-        <a href="list.html"><img src="assets/img/logo.png"></a>
+        <a href="list.html"><img src="assets/img/logo3.png"></a>
     </section>
     <section class="grid-45">
-        <a href="list.html"><img src="assets/img/logo.png"></a>
+        <a href="list.html"><img src="assets/img/logo4.png"></a>
     </section>
     <section class="grid-95">
-        <a href="add.html"><img src="assets/img/logo.png"></a>
+        <a href="add.html"><img src="assets/img/logo5.png"></a>
     </section>
 </main>
 <footer>
