--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="list.html"><img src="assets/img/logo4.png"></a>
     </section>
     <section class="grid-95">
-        <a href="add.html"><img src="assets/img/logo5.png"></a>
+        <a href="add.html"><img src="assets/img/logo5.png" id="logo5"></a>
     </section>
 </main>
 <footer>
