--- a/add.html
+++ b/add.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add News Item Form</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/CSS/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/CSS/unsemantic-grid-responsive-tablet.css" type="text/css">
 </head>
 <body>
+<header>
 
+    <h1>newsbox: add news item</h1><br>
+    all the news in a box
+
+</header>
+<main>
+<form>
+    <table>
+        <tr><td>title:</td><td><input type="text" name="title"></td></tr>
+        <tr><td>link:</td><td><input type="text" name="link"></td></tr>
+
+    </table>
+</form>
+</main>
+
+<footer>
+
+</footer>
 </body>
 </html>
