--- a/add.html
+++ b/add.html
@@ -14,7 +14,7 @@
     all the news in a box
 
 </header>
-<main>
+<main class="grid-container">
 <form>
     <table>
         <tr><td>title:</td><td><input type="text" name="title"></td></tr>
