--- a/add.html
+++ b/add.html
@@ -14,9 +14,9 @@
     all the news in a box
 
 </header>
-<main class="grid-container">
+<main>
 <form>
-    <table>
+    <table class="additem">
         <tr><td>title:</td><td><input type="text" name="title"></td></tr>
         <tr><td>link:</td><td><input type="text" name="link"></td></tr>
 
