--- a/add.html
+++ b/add.html
@@ -15,8 +15,8 @@
 
 </header>
 <main>
-<form>
-    <table class="additem">
+<form id="additem">
+    <table>
         <tr><td>title:</td><td><input type="text" name="title"></td></tr>
         <tr><td>link:</td><td><input type="text" name="link"></td></tr>
 
