--- a/add.html
+++ b/add.html
@@ -15,10 +15,11 @@
 
 </header>
 <main>
-<form id="additem">
+<form>
     <table>
         <tr><td>title:</td><td><input type="text" name="title"></td></tr>
         <tr><td>link:</td><td><input type="text" name="link"></td></tr>
+        <tr><td>summary:</td><td><textarea cols="30" rows="5" name="summary"></textarea></td></tr>
 
     </table>
 </form>
