--- a/add.html
+++ b/add.html
@@ -17,9 +17,17 @@
 <main>
 <form>
     <table>
-        <tr><td>title:</td><td><input type="text" name="title"></td></tr>
-        <tr><td>link:</td><td><input type="text" name="link"></td></tr>
+        <tr><td>title:</td><td><input type="text" name="title" size="30"></td></tr>
+        <tr><td>link:</td><td><input type="text" name="link" size="30"></td></tr>
         <tr><td>summary:</td><td><textarea cols="30" rows="5" name="summary"></textarea></td></tr>
+        <tr><td>category:</td><td>
+            <select>
+                <option value="sport" name="sport"></option>option>
+                <option value="politics" name="politics"></option>option>
+                <option value="technology" name="technology"></option>option>
+            </select>
+        </td></tr>
+        <tr><td colspan="2"><input type="submit" value="submit"></td></tr>
 
     </table>
 </form>
