--- a/add.html
+++ b/add.html
@@ -22,13 +22,12 @@
         <tr><td>summary:</td><td><textarea cols="30" rows="5" name="summary"></textarea></td></tr>
         <tr><td>category:</td><td>
             <select>
-                <option value="sport" name="sport"></option>option>
-                <option value="politics" name="politics"></option>option>
-                <option value="technology" name="technology"></option>option>
+                <option value="sport" name="sport">sport</option>option>
+                <option value="politics" name="politics">politics</option>option>
+                <option value="technology" name="technology">technology</option>option>
             </select>
         </td></tr>
-        <tr><td colspan="2"><input type="submit" value="submit"></td></tr>
-
+        <tr><td colspan="2"><input type="submit" id="submit" value="submit"></td></tr>
     </table>
 </form>
 </main>
