--- a/add.html
+++ b/add.html
@@ -17,10 +17,10 @@
 <main>
 <form>
     <table>
-        <tr><td>title:</td><td><input type="text" name="title" size="30"></td></tr>
-        <tr><td>link:</td><td><input type="text" name="link" size="30"></td></tr>
-        <tr><td>summary:</td><td><textarea cols="29" rows="5" name="summary"></textarea></td></tr>
-        <tr><td>category:</td><td>
+        <tr><td><label for="title">title:</label></td><td><input type="text" name="title" size="30"></td></tr>
+        <tr><td><label for="link">link:</label></td><td><input type="text" name="link" size="30"></td></tr>
+        <tr><td><label for="summary">summary:</label></td><td><textarea cols="29" rows="5" name="summary"></textarea></td></tr>
+        <tr><td><label for="category">category:</label></td><td>
             <select>
                 <option value="sport" name="sport">sport</option>option>
                 <option value="politics" name="politics">politics</option>option>
