--- a/add.html
+++ b/add.html
@@ -14,7 +14,7 @@
     all the news in a box
 
 </header>
-<main>
+<main class="form">
 <form>
     <table>
         <tr><td><label for="title">title:</label></td><td><input type="text" name="title" size="30"></td></tr>
