--- a/list.html
+++ b/list.html
@@ -10,16 +10,18 @@
 <body>
 <header>
 
-    <h1>newsbox:all news</h1><br>
+    <h1>newsbox: all news</h1><br>
     all the news in a box
 
 </header>
 
 <main>
 
+
+
 </main>
 <footer>
-
+    <p>Designed by Iain Scott, 2016</p>
 
 </footer>
 </body>
