--- a/list.html
+++ b/list.html
@@ -17,6 +17,14 @@
 
 <main>
 
+    <form>
+        <table>
+            <tr><td><input type="text" name="link" size="30"></td></tr>
+            <tr><td><textarea cols="31" rows="5" name="summary"></textarea></td></tr>
+            <tr><td><input type="submit" id="submit" value="submit"></td></tr>
+        </table>
+    </form>
+
 
 
 </main>
