--- a/add.html
+++ b/add.html
@@ -17,9 +17,9 @@
 <main class="form">
 <form>
     <table>
-        <tr><td><label for="title">title:</label></td><td><input type="text" name="title" size="30"></td></tr>
-        <tr><td><label for="link">link:</label></td><td><input type="text" name="link" size="30"></td></tr>
-        <tr><td><label for="summary">summary:</label></td><td><textarea cols="31" rows="5" name="summary"></textarea></td></tr>
+        <tr><td><label for="title">title:</label></td><td><input type="text" name="title" size="30" required></td></tr>
+        <tr><td><label for="link">link:</label></td><td><input type="text" name="link" size="30" required></td></tr>
+        <tr><td><label for="summary">summary:</label></td><td><textarea cols="31" rows="5" name="summary" required></textarea></td></tr>
         <tr><td><label for="category">category:</label></td><td>
             <select>
                 <option value="sport" name="sport">sport</option>option>
