--- a/list.html
+++ b/list.html
@@ -30,7 +30,7 @@
         <table>
             <tr><td><input type="text" name="link" size="100"></td></tr>
             <tr><td><textarea cols="105" rows="5" name="summary"></textarea></td></tr>
-            <tr><td><input type="submit" id="submit" value="submit"></td></tr>
+            <tr><td><input type="submit" id="submit2" value="submit"></td></tr>
         </table>
     </form>
 
