--- a/list.html
+++ b/list.html
@@ -15,6 +15,16 @@
 
 </header>
 
+<?php
+include("connection.php");
+$sql = "SELECT * FROM news_item";
+$result = $db->query($sql);
+while ($row = $result->fetch_array()) {
+$title = $row['title'];
+echo "hello {$title}";
+}
+?>
+
 <main>
 
     <form class="form2">
