--- a/list.html
+++ b/list.html
@@ -11,7 +11,7 @@
 <header>
 
     <h1>newsbox: all news</h1><br>
-    all the news in a box
+    all the news in a box...
 
     <?php
     include("connection.php");
