--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
 <main class="grid-container">
     <section class="grid-45">
-        <a href="list.html"><img src="assets/img/logo.png"></a>
+        <a href="list.php"><img src="assets/img/logo.png"></a>
     </section>
     <section class="grid-45">
-        <a href="list.html"><img src="assets/img/logo2.png"></a>
+        <a href="list.php"><img src="assets/img/logo2.png"></a>
     </section>
     <section class="grid-45">
-        <a href="list.html"><img src="assets/img/logo3.png"></a>
+        <a href="list.php"><img src="assets/img/logo3.png"></a>
     </section>
     <section class="grid-45">
-        <a href="list.html"><img src="assets/img/logo4.png"></a>
+        <a href="list.php"><img src="assets/img/logo4.png"></a>
     </section>
     <section class="grid-95">
         <a href="add.php"><img src="assets/img/logo5.png" id="logo5"></a>
