--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <main class="grid-container">
     <section class="grid-45">
-        <a href="list.php><img src="assets/img/logo.png"></a>
+        <a href="list.php"><img src="assets/img/logo.png"></a>
     </section>
     <section class="grid-45">
         <a href="list.php?category=politics"><img src="assets/img/logo2.png"></a>
